--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ layout: default
 <h1 class="project-heading">All Topics</h1>
 <div class="all-projects">
 {% for post in site.posts %}
-  <a href="{{ post.url }}">{% if post.arabic_title and post.title %}
+  <a href="{% if site.url and site.baseurl %}{{ '/' | prepend: site.baseurl | prepend: site.url }}{% endif %}{{ post.url }}">{% if post.arabic_title and post.title %}
     <span class="arab">{{ post.arabic_title }}{% elsif post.title %}{{ post.title }}{% else %}{% endif %}</span>
   </a>
 {% endfor %}
